# llm-agent-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/config/: README.md  __init__.py  factory.py  models.py  settings.py  validation.py
app/logging/: README.md  __init__.py  config.py  formatters.py  middleware.py  utils.py
app/models/: __init__.py  context.py  errors.py  interfaces.py  requests.py  responses.py
app/services/: __init__.py  agent_service.py  tool_service.py
app/services/llm_providers/: __init__.py  base.py  error_handler.py  factory.py  fallback_manager.py  openai_provider.py
app/tools/: __init__.py  base.py  context.py  factory.py  registry.py
app/tools/implementations/: __init__.py  calculator.py  file_operations.py  web_search.py
